# moltbot-helpers

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT_BEST_PRACTICES.md  Dockerfile  Dockerfile.minimal  Dockerfile.production  Dockerfile.quick  FINAL_CLEANUP_NOTES.md  INFRASTRUCTURE.md  K3S_SETUP_INSTRUCTIONS.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_READY.md  README.PRODUCTION  README.md  SECURITY.md  TOOL_VERIFICATION.md  add_invalid_tasks_doc.py  additional-demo-ideas.md  api.py  backup  dashboard.html  demo-deployment.md  demo-ideas.md  demo-plan.md  demo-tasks.md  demo_dashboard.py  demo_server.py  demo_worker.js  deploy-demo-to-vercel.sh  diagnostic-k8s.sh  docker-readme.md  docker-security-best-practices.md  init_and_update_project_tasks.py  init_databases.sh  integrate  k8s-openclaw-services.yaml  launch_dashboard.sh  launch_demo.sh  launch_demo_docker.sh  launch_main_ui_docker.sh  (+21 more)
config/: seek.example.json
demo-dashboard/: index.html  package.json  vercel.json
demo-dashboard/api/: index.py
demo-environment/: README.md  demo_agent.py
demo-environment/config/: demo_config.yaml
demo-environment/data/: synthetic_data.json
demo-environment/mocks/: github_api_mock.py  google_api_mock.py
demo-environment/scripts/: reset_demo.sh  start_demo.sh
docs/: legacy-deprecation.md  postgresql-tools.md
google-verification-website/: README.md  index.html  package.json  privacy.html  terms.html  vercel.json
scripts/: init_db.py  production_cleanup.sh  production_cleanup_manual.sh  remove_legacy_dbs.py  secure-creds.sh  verify_production_readiness.sh
shared-components/: ARCHITECTURE.md  README.md  ui_components.py  universal_data_adapter.js  universal_data_adapter.py
src/: deprecation_notice.py  process_manager.py
src/automation/: __init__.py  trigger_manager.py  trigger_manager_pg.py
src/backup/: __init__.py  backup_util.py  cli.py
templates/: dashboard.html  renderer.py
ui/: README.md  api.py  run_dashboard.py  start_server.sh
website/: README.md  index.html  package.json  privacy.html  terms.html
(+45 files in other folders)
