[project]
name = "moltbot-helpers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=3.0",
    "numpy>=1.24",
    "thefuzz[speedup]",
]

[project.scripts]
fp = "fp.cli:main"
seek = "seek.cli:main"
lookup = "lookup.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fp", "src/seek", "src/lookup"]
