[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moltbot-helpers"
version = "1.0.0"
description = "CLI tools for OpenClaw - PostgreSQL backend"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary",
    "flask",
    "flask-cors",
    "requests",
    "numpy",
]

[project.scripts]
pt = "pt.cli:main"
fp = "fp.cli:main"
seek = "seek.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
